--- a/index.html
+++ b/index.html
@@ -39,24 +39,14 @@
                 <div class="spinner"></div>
                 <p>جاري اكتشاف مواصفات جهازك...</p>
             </div>
-            <div id="device-info" class="specs-box">
-                <h3><i class="icon-info"></i> مواصفات الجهاز</h3>
-                <div class="spec-item">
-                    <span class="spec-label">النوع:</span>
-                    <span id="device-name" class="spec-value">--</span>
-                </div>
-                <div class="spec-item">
-                    <span class="spec-label">الذاكرة:</span>
-                    <span id="device-ram" class="spec-value">--</span>
-                </div>
-                <div class="spec-item">
-                    <span class="spec-label">المعالج:</span>
-                    <span id="device-cpu" class="spec-value">--</span>
-                </div>
-                <div class="spec-item">
-                    <span class="spec-label">نظام التشغيل:</span>
-                    <span id="device-os" class="spec-value">--</span>
-                </div>
+            <div id="device-info">
+    <p><strong>اسم الجهاز:</strong> <span id="device-name"></span></p>
+    <p><strong>الرام:</strong> <span id="device-ram"></span></p>
+    <p><strong>المعالج:</strong> <span id="device-cpu"></span></p>
+    <p><strong>كرت الشاشة:</strong> <span id="device-gpu"></span></p>
+    <p><strong>نظام التشغيل:</strong> <span id="device-os"></span></p>
+</div>
+
             </div>
             <div id="sensitivity-info" class="sensitivity-box">
                 <h3><i class="icon-settings"></i> إعدادات الحساسية المثالية</h3>
