--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Vandam Egy">
     <meta name="description" content="أدوات إعدادات فري فاير المتقدمة - اكتشاف دقيق للجهاز وحساسية مثالية حسب عدد الأصابع">
     <title>Vandam Egy - إعدادات فري فاير المتقدمة</title>
-    <link rel="stylesheet" href="enhanced_style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
