--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     <!-- Scripts -->
     <script src="enhanced_device_detection.js"></script>
     <script src="sensitivity_database.js"></script>
-    <script src="enhanced_script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
